--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,11 @@
 body {
     background-color: #444444;
     font-size: clamp(16px, 4vw, 22px); 
+    color: black;
 }
 
 .bg-test {
-    background-color: blueviolet;
+    background-color: rgba(137, 43, 226, 0.61);
 }
 
 .bg-test2 {
@@ -12,22 +13,25 @@ body {
 }
 
 .headerTile {
-    margin: 1vw 0 1vw 0;
+    margin-top: 2vw;
+    box-shadow: 1vw 1vw 2vw black;
 }
 
 #about {
-    border: solid 2px #222222;
-    margin-left: 1vw;
+
 }
 #headerImg {
-    margin-right: 1vw;
-    padding: 0;
+    background-color: rgba(216, 191, 216, 0.199);
+    font-size: 5vmin;
 }   
+#name {
+    font-size: 2em;
+}
+
 
 #headerImg img {
     width: 100%;
     height: 100%;
-    
 }
 
 .backImg {
@@ -37,30 +41,6 @@ body {
     background-origin: content-box;
 }
 
-#welcomeTextNav {
-    height: 10%;
-    background-color: rgba(180, 180, 180, 0.767);
-}
-
-#welcomeText {
-    height: 90%;
-    padding-left: 0vw;
-    color: white;
-    /* font-family: 'Inconsolata', monospace; */
-}
-
-
-#terminal {
-    color: rgb(43, 255, 0);
-    font-size: 3vmin;
-    background-color: rgba(0, 0, 0, 0.76);
-    border: none;
-    resize: none;
-    height: 100%;
-    width: 100%;
-    padding: 0;
-  }
-
-  textarea:focus {
-      outline: none;
-  }
+ .panel {
+    margin-top: 0vw;
+ }
