fixed terminal rows issue & disabled zooming
Signed-off-by: Michal <michalpilch94@gmail.com>

--- a/styles/terminal.css
+++ b/styles/terminal.css
@@ -25,6 +25,7 @@
 	min-width: 200px;
 	font-size: 16.79px;
 	font-family: 'Inconsolata', monospace; /* ### TODO find better font ### */ 
+	line-height: 1;
 }
 #term_topBar {
 	width: 100%;
