--- a/styles/terminal.css
+++ b/styles/terminal.css
@@ -138,12 +138,14 @@
 
 
 .term_dropdownMenu {
+	font-size: 0.8em;
 	position: absolute;
 	height: auto;
 	top: 100%;
-	min-width: 160px;
+	width: max-content;
+	min-width: 100%;
 	z-index: 1;
-	
+	box-shadow: 2px 2px 0.5vw black;
 }
 
 .term_dropdownMenu_item {
