--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,13 @@ body {
     display: flex;
     align-items: center;
 }
+.max-w-1200 {
+    max-width: 1200px !important;
+}
+.separator {
+    border-bottom: 1px solid rgb(25, 255, 25);
+    margin: 1vmin 0 1vmin 0;
+}
 .bg-test {
     background-color: rgba(137, 43, 226, 0.61);
 }
@@ -18,7 +25,7 @@ body {
 }
 
 .headerTile {
-    margin-top: 2vw;
+    margin-top: 1vw;
     box-shadow: 1vw 1vw 2vw black;
     font-size: 5vmin;
 }
@@ -142,6 +149,7 @@ body {
 
 /* #region SKILLS PANEL */
 #aboutMePanel {
+
     background-color: rgb(8, 8, 8);
     color: white;
 }
@@ -149,7 +157,11 @@ body {
 #aboutMePanel p {
     text-align: justify;
     margin: 0 10vw 0 10vw;
-    font-size: 1.5rem;
+    font-size: 3vmin;
+}
+#aboutMePanel h1 {
+    text-align: center;
+    font-size: 5vmin;
 }
 /* #endregion */
  
