--- a/styles/main.css
+++ b/styles/main.css
@@ -343,6 +343,17 @@ body {
     margin-bottom: 2vh;
 }
 
+.logoHolder-minor {
+    width: 50%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2vh;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /* #endregion */
 
 
