--- a/img/icons/font/_flaticon.scss
+++ b/img/icons/font/_flaticon.scss
@@ -1,6 +1,6 @@
     /*
     Flaticon icon font: Flaticon
-    Creation date: 07/12/2020 12:14
+    Creation date: 14/12/2020 14:44
     */
 
     @font-face {
@@ -43,6 +43,8 @@
 .flaticon-github:before { content: "\f103"; }
 .flaticon-contact:before { content: "\f104"; }
 .flaticon-mission:before { content: "\f105"; }
+.flaticon-phone:before { content: "\f106"; }
+.flaticon-email:before { content: "\f107"; }
     
     $font-Flaticon-laptop: "\f100";
     $font-Flaticon-web-programming: "\f101";
@@ -50,3 +52,5 @@
     $font-Flaticon-github: "\f103";
     $font-Flaticon-contact: "\f104";
     $font-Flaticon-mission: "\f105";
+    $font-Flaticon-phone: "\f106";
+    $font-Flaticon-email: "\f107";
