--- a/styles/main.css
+++ b/styles/main.css
@@ -60,8 +60,17 @@ body {
     line-height: 50px;
     text-align: center;
     margin: 20px auto;
-    border: 1px solid white;
+    border: 1px solid antiquewhite;
     color: white;
+}
+
+#buttonABTME:hover {
+    cursor: pointer;
+}
+#buttonABTME:active {
+    border-color: white;
+    border-width: 2px;
+    /* transition: border-width .1s; */
 }
 
 /* .pos-topright {
